--- a/ESP32/boards/prj_Aether_Rev1_0.conf
+++ b/ESP32/boards/prj_Aether_Rev1_0.conf
@@ -1,7 +1,1 @@
-CONFIG_STACK_POINTER_RANDOM=0
-
-CONFIG_TEST_RANDOM_GENERATOR=y
-
-CONFIG_TIMER_RANDOM_GENERATOR=y
-
-CONFIG_TEST_CSPRNG_GENERATOR=y
+CONFIG_TIMEBASE=y
