--- a/ESP32/prj.conf
+++ b/ESP32/prj.conf
@@ -1,7 +1,7 @@
 CONFIG_STACK_POINTER_RANDOM=0
-
 CONFIG_TEST_RANDOM_GENERATOR=y
-
 CONFIG_TIMER_RANDOM_GENERATOR=y
-
 CONFIG_TEST_CSPRNG_GENERATOR=y
+
+CONFIG_LOG=y
+CONFIG_LORA=y
