Added LVGL support and small demo. NOTE:CONFIG_LV_Z_VDB_SIZE=32 needs to be added in prj.conf. menuconfig will not allow you to set this without some sort of sheild, but is necessary. Otherwise, lv_task_handler() will stall.

--- a/ESP32/boards/YKT/Aether/ykt_aether_procpu.dts
+++ b/ESP32/boards/YKT/Aether/ykt_aether_procpu.dts
@@ -83,9 +83,9 @@
 	pinctrl-names = "default";
 
 	// OLED display
-	oled0: sh1106@3C {
+	oled0: sh1106@3c {
 		compatible = "sinowealth,sh1106";
-		reg = <0x3C>;
+		reg = <0x3c>;
 		width = <128>;
 		height = <64>;
 		segment-offset = <2>;
