--- a/ESP32/prj.conf
+++ b/ESP32/prj.conf
@@ -1,10 +1,45 @@
+# Zephyr Project Configuration File
+
+# Needed since default stack size is too small for LVGL
+CONFIG_MAIN_STACK_SIZE=8192
+
 CONFIG_STACK_POINTER_RANDOM=0
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_TIMER_RANDOM_GENERATOR=y
 CONFIG_TEST_CSPRNG_GENERATOR=y
 
+# Logging Support
 CONFIG_LOG=y
+
+# LoRa Support
 CONFIG_LORA=y
 
+# I2C Support
 CONFIG_I2C=y
+
+# Display Support
 CONFIG_DISPLAY=y
+CONFIG_CHARACTER_FRAMEBUFFER=y
+
+# LVGL Configuration
+CONFIG_LVGL=y
+
+CONFIG_LV_COLOR_DEPTH_1=y
+CONFIG_LV_Z_BITS_PER_PIXEL=1
+CONFIG_LV_Z_VDB_SIZE=32
+
+CONFIG_LV_CONF_MINIMAL=y
+
+CONFIG_LV_USE_BUTTON=y
+CONFIG_LV_USE_CHECKBOX=y
+CONFIG_LV_USE_LABEL=y
+CONFIG_LV_USE_MENU=y
+CONFIG_LV_USE_LIST=y
+CONFIG_LV_USE_SLIDER=y
+CONFIG_LV_USE_SWITCH=y
+
+CONFIG_LV_USE_FLEX=y
+
+CONFIG_LV_USE_THEME_MONO=y
+
+CONFIG_LV_Z_MEM_POOL_SIZE=8192
