--- a/ESP32/prj.conf
+++ b/ESP32/prj.conf
@@ -11,6 +11,9 @@ CONFIG_TEST_CSPRNG_GENERATOR=y
 # Logging Support
 CONFIG_LOG=y
 
+# Input Support
+CONFIG_INPUT=y
+
 # LoRa Support
 CONFIG_LORA=y
 
